connect to sql database

--- a/ebay/appsettings.json
+++ b/ebay/appsettings.json
@@ -1,13 +1,14 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
-  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ebayDb;User Id=SA;Password=Password123;TrustServerCertificate=true"
+  }
 }
 
