add viewModel for search

--- a/ebay/ebay.csproj
+++ b/ebay/ebay.csproj
@@ -11,6 +11,7 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <None Remove="Views\Product\" />
+    <None Remove="ViewModel\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
@@ -35,5 +36,6 @@
     <Folder Include="wwwroot\assets\" />
     <Folder Include="wwwroot\assets\dist\" />
     <Folder Include="Views\Product\" />
+    <Folder Include="ViewModel\" />
   </ItemGroup>
 </Project>
