--- a/ebay/ebay.csproj
+++ b/ebay/ebay.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views/Shared/_publicLayout.cshtml" />
     <Content Remove="wwwroot\assets\" />
     <Content Remove="wwwroot\assets\dist\" />
   </ItemGroup>
@@ -39,5 +40,8 @@
     <Folder Include="wwwroot\assets\dist\" />
     <Folder Include="Views\Product\" />
     <Folder Include="ViewModel\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Views/Shared/_publicLayout.cshtml" />
   </ItemGroup>
 </Project>
