add model Relations

--- a/ebay/ebay.csproj
+++ b/ebay/ebay.csproj
@@ -36,6 +36,7 @@
     <Content Remove="wwwroot\assets\dist\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Controllers/" />
     <Folder Include="wwwroot\assets\" />
     <Folder Include="wwwroot\assets\dist\" />
     <Folder Include="Views\Product\" />
